Update process + bug fixes

--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 NEXT_PUBLIC_GA_MEASUREMENT_ID=G-7D3T5KS8H5
 NEXT_PUBLIC_NAVER_API=5p8kwf4b0c
+NEXT_PUBLIC_EMAILJS_SERVICE_ID=service_f98mp6n
+NEXT_PUBLIC_EMAILJS_TEMPLATE_ID=template_75yrogx
+NEXT_PUBLIC_EMAILJS_PUBLIC_KEY=jb6iQm5PjICmOWpUO
