--- a/package.json
+++ b/package.json
@@ -9,27 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.6.2",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
     "@types/gtag.js": "^0.0.10",
-    "@types/react-slick": "^0.23.8",
+    "@types/react-modal": "^3.13.1",
     "classnames": "^2.3.1",
     "critters": "^0.0.16",
     "gsap": "^3.10.4",
     "next": "12.1.6",
     "normalize.scss": "^0.1.0",
+    "nuka-carousel": "^5.1.0",
     "react": "18.1.0",
     "react-channel-plugin": "^2.1.4",
     "react-collapsed": "^3.3.1",
     "react-dom": "18.1.0",
+    "react-hook-form": "^7.31.3",
+    "react-modal": "^3.15.1",
     "react-popper-tooltip": "^4.3.1",
-    "react-slick": "^0.29.0",
+    "react-textarea-autosize": "^8.3.4",
     "recoil": "^0.7.3-alpha.2",
     "sass": "^1.51.0",
     "seamless-scroll-polyfill": "^2.1.8",
-    "sharp": "^0.30.6",
-    "slick-carousel": "^1.8.1"
+    "sharp": "^0.30.6"
   },
   "devDependencies": {
     "@svgr/webpack": "^6.2.1",
