Add channel io key

--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ NEXT_PUBLIC_NAVER_API=5p8kwf4b0c
 NEXT_PUBLIC_EMAILJS_SERVICE_ID=service_f98mp6n
 NEXT_PUBLIC_EMAILJS_TEMPLATE_ID=template_75yrogx
 NEXT_PUBLIC_EMAILJS_PUBLIC_KEY=jb6iQm5PjICmOWpUO
+NEXT_PUBLIC_CHANNEL_PLUGIN_KEY=4901c2a2-59db-423c-a135-bf76f7b5bff6
